--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,12 @@ npm-debug.log
 /priv/static/
 
 .elixir_ls/
+
+
+# Terraform files
+.terraform
+terraform.tfstate
+terraform.tfvars
+*.tfstate*
+terraform-provider*v*
+current.plan
